# airvector

./: .gitignore  README.md  pyproject.toml
airvector/clients/db/: Pinecone.py  client.py
airvector/clients/storage/: AzureBlobStorage.py  client.py
airvector/pipelines/: Pipeline.py
airvector/pipelines/assetsToVectorStore/: pipeline.py  runner.py  steps.py  stepsCode.py
airvector/state/: manageState.py
airvector/transform/: ComputeImageLayout.py  FileToZip.py  OpenAIVision.py  OpenAiAzureEmbedding.py  OpenAiAzureVision.py  VideoToImages.py
airvector/utils/: hasher.py  prompts.py  runner.py
